Add new notebooks. Refactor asXML to getXMLInstance.

--- a/RM/3_1_0/notebooks/00. Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/00. Getting Started.ipynb
@@ -33,7 +33,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will guide you through a logical sequence for you to become familiar with S3Model and how to use the library in your applications to build semantically rich, coherent data models. These tutorials provide an introduction only. To become fully versed in the use of S3Model consider taking the online certification course and purchasing the book *Infotropic*. The course includes access to the online *Infotropic Tools Suite* that provides enhanced modeling capability without the need to write code."
+    "This notebook will guide you through a logical sequence for you to become familiar with S3Model components and how to use the library in your applications to build semantically rich, coherent data models. \n",
+    "\n",
+    "These tutorials provide an introduction only. To become fully versed in the use of S3Model consider taking the online certification course and purchasing the book *Knowledge Modeling for Artificial General Intelligence*; *An infotropic Approach*. \n",
+    "\n",
+    "The course includes access to the online *Infotropic Tools* (ITT) *Suite*. The ITT Suite provides enhanced modeling and reusability capability without the need to write code."
    ]
   },
   {
@@ -41,9 +45,13 @@
    "metadata": {},
    "source": [
     "## Multi-level Models vs. Instances\n",
-    "It is essential to understand that these library classes represent the S3Model Reference Model (RM). The instances of these classes express constraints on those RM classes. These constraints define a specific model that is identified by a *collision-resistant unique identifier* (CUID). Once defined, these models are immutable under the guidelines of S3Model. Since shareability is a cornerstone of the S3Model approach these models can be serialized to a XML Schema making them easily shareable across all platforms.\n",
+    "It is essential to understand that these library classes represent the S3Model Reference Model (RM) as defined in the specification. \n",
     "\n",
-    "In the tutorials linked here, we are building only model components one at a time and not as part of a complete data model. An advanced tutorial as well as documentation for Kunteksto and the Infotropic Tools Suite describe creating complete, functional data models. "
+    "The instances of these classes express constraints on those RM classes. These constraints define a specific model that is identified by a *collision-resistant unique identifier* (CUID). Once defined, these models are immutable under the guidelines of the S3Model specifications. Since shareability is a cornerstone of the S3Model approach these models can be serialized to a XML Schema (including the RDF) making them easily shareable across all platforms. In the tutorials we visualize serialing the model components as XML Schema complexTypes. You do not need these to use the Python implementation but they are used internally for validation and conformance with the RM. \n",
+    "\n",
+    "In the intital tutorials linked here, we are building only model components one at a time and not as part of a complete data model. The final section of this tutorial does create a complete model. \n",
+    "\n",
+    "An advanced course as well as documentation for Kunteksto and the Infotropic Tools Suite describe creating complete, functional data models is available. "
    ]
   },
   {
@@ -54,9 +62,9 @@
     "\n",
     "The Xd* datatypes provide the capability of adding ontological, spatial and temporal semantics to simple datatypes.\n",
     "\n",
-    "You should go through each of these interactive notebooks in sequence. Not all features are expressed in each notebook. Each notebook does build on the previous notebooks. \n",
+    "You should go through each of these interactive notebooks in sequence. Not all features are expressed in each notebook. Models created using S3Model can be very simple or very complex. We intend to provide a gentle introduction here. Each notebook does build on the previous notebooks. \n",
     "\n",
-    "Reference Ranges and Intervals are covered in the XdQuantity examples."
+    "*Reference Ranges* and *Intervals* are covered in the XdQuantity examples."
    ]
   },
   {
