--- a/RM/3_1_0/notebooks/Party Examples.ipynb
+++ b/RM/3_1_0/notebooks/Party Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -52,14 +52,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class PartyType in module s3m_meta:\n",
+      "\n",
+      "class PartyType(MetaCommon)\n",
+      " |  PartyType(label: str)\n",
+      " |  \n",
+      " |  Description of a party, including an optional external link to data for this \n",
+      " |  party in a demographic or other identity management system. An additional \n",
+      " |  details element provides for the inclusion of information related to this \n",
+      " |  party directly. \n",
+      " |  \n",
+      " |  If the party information is to be anonymous then do not include the details element.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      PartyType\n",
+      " |      MetaCommon\n",
+      " |      abc.ABC\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, label: str)\n",
+      " |      The semantic label (name of the model) is required.\n",
+      " |  \n",
+      " |  getModel(self)\n",
+      " |  \n",
+      " |  validate(self)\n",
+      " |      Every Type must implement this method.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  party_details\n",
+      " |      Structural details about the party.\n",
+      " |  \n",
+      " |  party_name\n",
+      " |      Optional human-readable name (in String form)\n",
+      " |  \n",
+      " |  party_ref\n",
+      " |      Optional reference to more detailed demographic or identification \n",
+      " |      information for this party, in an external system.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __abstractmethods__ = frozenset()\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from MetaCommon:\n",
+      " |  \n",
+      " |  __str__(self)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from MetaCommon:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  cardinality\n",
+      " |      The cardinality status values for meta classes.\n",
+      " |      \n",
+      " |      The setter method can be called by each subclass to add cardinality\n",
+      " |      values for each element.\n",
+      " |      Some elements cardinality may not be changed such as most of the maxOccurs.\n",
+      " |      \n",
+      " |      The cardinality dictionary uses a string representation of each\n",
+      " |      property name and a list as the value.\n",
+      " |      \n",
+      " |      The value passed into the setter is a tuple with v[0] as a string (key) and\n",
+      " |      v[1] as a list containing an integer set representing the\n",
+      " |      (minimum, maximum) values. The entire value list is replaced in the dictionary.\n",
+      " |      \n",
+      " |      Example\n",
+      " |      --------\n",
+      " |      \n",
+      " |      ('committer', [1,1]) will set the committer value (Attestation) to be required.\n",
+      " |      \n",
+      " |      \n",
+      " |      NOTES\n",
+      " |      -----\n",
+      " |      The Python value of 'None' represents the 'unbounded' XML Schema value.\n",
+      " |      None is converted to Decimal('Infinity') for comparisons in the setter.\n",
+      " |      The 'unbounded' value is allowed on only a few attributes.\n",
+      " |  \n",
+      " |  definition_url\n",
+      " |      The primary definition URL for the model.\n",
+      " |      Cannot be an IP address.\n",
+      " |  \n",
+      " |  docs\n",
+      " |      The human readable documentation string describing the purpose of\n",
+      " |      the model.\n",
+      " |  \n",
+      " |  label\n",
+      " |      The semantic name of the component.\n",
+      " |  \n",
+      " |  mcuid\n",
+      " |      The unique identifier of the component.\n",
+      " |  \n",
+      " |  pred_obj_list\n",
+      " |      A list of additional predicate object pairs to describe the component.\n",
+      " |      \n",
+      " |      Each list item is a tuple where 0 is the predicate and 1 is the object.\n",
+      " |      \n",
+      " |      Example:\n",
+      " |      ('rdf:resource','https://www.niddk.nih.gov/health-information/health-statistics')\n",
+      " |      The setter accepts the tuple and appends it to the list.\n",
+      " |      If an empty list is supplied it resets the value to the empty list.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(PartyType)"
    ]
@@ -77,17 +195,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PartyType : Test Party Model, ID: cjnh36z3f0006k58p19ytvhzh\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "pty = PartyType('Test Party Model')\n",
-    "\n",
+    "pty.definition_url = 'http://s3model.com/examples/partytest'\n",
     "# create the required contents and any optionals that we want \n",
     "s = XdStringType(\"Some details\") # this will be in the details cluster\n",
     "s.definition_url = 'http://s3model.com/examples/somedetails'\n",
