--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "Notice in the above documentation that *label* and *definition_url* are both marked **REQUIRED**. The *label* must be passed on initialization. This is true of all XdTypes. \n",
     "\n",
-    "Create a XdBoolean instance. Set some values. Note the format for the *options* dictionary. We also must pass in the *label* as a string. \n",
+    "Create a XdBoolean *model instance*. Set some values. Note the format for the *options* dictionary. We also must pass in the *label* as a string. \n",
     "\n",
     "In this case we are going to set a boolean value based on Textual (select or radio button UI) reactions to a book called *Can it happen here?*"
    ]
@@ -138,9 +138,7 @@
     }
    },
    "source": [
-    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF as well as appended to the human-readable docs. This URL should define or describe the value expressed in the *label*.\n",
-    "\n",
-    "If you do not want it to appear in your docs, then set the definition_url before setting your docs string."
+    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF. This URL should define or describe the value expressed in the *label*. This URL should point to the business case or reason for this component to be modeled. In an attempt to keep these tutorials simple, some of our links are rather contrived. As you progress towards the final full data model it should become more apparent as to how to select the URLs for your models."
    ]
   },
   {
@@ -164,7 +162,7 @@
     }
    },
    "source": [
-    "Check the ouput signature by printing an instance. It prints the class type, label and unique ID. This is common across all XdAnyType subtypes (aka. XdTypes)."
+    "Check the ouput signature by printing the model instance. It prints the class type, label and unique ID. This is common across all XdAnyType subtypes (aka. XdTypes)."
    ]
   },
   {
@@ -190,7 +188,7 @@
    },
    "source": [
     "# Ontological Semantics (part 2)\n",
-    "In addition to the defining_url we can add more RDF semantics to the model for machine processing. \n",
+    "In addition to the *definition_url* we can add more RDF semantics to the model for machine processing. \n",
     "\n",
     "We do this by passing in tuples with a predicate/object pair. \n",
     "These are part of the RDF subject, predicate, object triple concept. This is the foundation of semantic graph data. If you aren't familiar with these concepts then see: http://www.linkeddatatools.com/introducing-rdf "
@@ -206,9 +204,9 @@
    "source": [
     "In S3Model, the model component which is defined by the unique ID *mcuid*, is the Subject. \n",
     "So here we are adding a predicate and an object to give enhanced meaning to our model. \n",
-    "The unique ID *mcuid* is a synonym for the *label*.\n",
+    "The unique ID *mcuid* is a synonym for the natural language *label*.\n",
     "\n",
-    "When you review the XSD fragment model below, you can see that some default RDF is already added. The statements that connect this model to the S3Model ontology as well as the label and comment statements. Then your additional predicate/object pairs are added."
+    "When you review the XSD fragment model below, you can see that some default RDF is already added. There are statements that connect this model to the S3Model ontology, providing the basis for cross-domain interoperability, as well as the *label* and *comment* statements."
    ]
   },
   {
@@ -233,8 +231,9 @@
     }
    },
    "source": [
-    "Review the XSD model. \n",
-    "Note how the RDF is embeded along with the validation instructions. This provides a single file (when combined with all the other parts of a DMType) that is sharable as the author chooses. It completely informs the receiver of the meaning of each component. Both in human-readable as well as machine processable forms.\n",
+    "\n",
+    "In the next cell you will review the XSD model. \n",
+    "Note how the RDF is embeded along with the validation instructions. This provides a single file (when combined with all the other parts of a DMType) that is sharable as the author chooses. It completely informs the receiver of the source meaning of each component. Both in human-readable as well as machine processable forms.\n",
     "\n",
     "\n",
     "Note how the **options** are used as enumerations to constrain each of the two elements. The model requires (via xs:choice) that only a *true-value* or a *false-value* is allowed in the data."
@@ -262,7 +261,7 @@
     }
    },
    "source": [
-    "View an example XML fragment."
+    "View an example XML fragment. The model defines what is required and here we include several elements that are optional. Review the documentation again for details."
    ]
   },
   {
@@ -276,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXMLex())"
+    "print(d.getXMLExample())"
    ]
   },
   {
@@ -287,7 +286,7 @@
     }
    },
    "source": [
-    "View an example JSON fragment."
+    "View an example JSON fragment. This demonstrates how the same information can be serialized as JSON."
    ]
   },
   {
@@ -301,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asJSONex())"
+    "print(d.getJSONExample())"
    ]
   },
   {
@@ -313,7 +312,13 @@
    },
    "source": [
     "# Temporal and Spatial Semantics\n",
-    "We have previously focused on the semnatics around the meaning of the model and the data captured in the model. Just as important is the ability to exchange the significant time elements as well as the spatial or location elements. We only provide the latitude and longitude elements on all xd types. If altitude is required it should be modeled separately as a XdQuantity ot in a Cluster of XdQuantities in order to specific the complex relationships with other environmental concepts such as atmospheric pressure and temperature. "
+    "We have previously focused on the semnatics around the meaning of the information being modeled and the data captured. \n",
+    "\n",
+    "Just as important is the ability to exchange the significant time elements as well as the spatial or location elements. \n",
+    "\n",
+    "**Advanced**\n",
+    "\n",
+    "We only provide the *latitude* and *longitude* elements on the XdTypes for spatial semantics. If altitude is required it should be modeled separately as a XdQuantity in a Cluster of XdQuantities in order to specify the complex relationships with other environmental concepts such as atmospheric pressure and temperature based on the particual use case. "
    ]
   },
   {
@@ -324,9 +329,11 @@
     }
    },
    "source": [
-    "Note in the instances the act, vtb. vte. tr. modified, latitude and longitude elements. The requirements for these via the model is set using the cardinality dictionary. Our examples here did not take that into account for simplicity sake. That is why we used the asXMLex and asJSONex calls here. The other Xd types do not have those methods. The asXML() and asJSON() methods are valid in all Xd types. \n",
+    "Note in the data instances the *act, vtb, vte, tr, modified, latitude and longitude* elements. \n",
     "\n",
-    "Also, Exceptional Values are inserted via the validation process in your implementation. They are shown here just as a full example. "
+    "These are default optional. The requirements for these is set using the cardinality dictionary. Our examples here did not take that into account for simplicity sake. That is why we used the asXMLex and asJSONex calls here. The other XdTypes do not have those methods. The getXMLInstance() and getJSONInstance() methods are the valid methods in all XdTypes. \n",
+    "\n",
+    "The *Exceptional Values* are inserted during the validation process in your implementation. They are shown here just as a full example. The advanced course covers how to implement this process."
    ]
   },
   {
@@ -350,7 +357,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXML())"
+    "print(d.getXMLInstance())"
    ]
   },
   {
@@ -359,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(d.asJSON())"
+    "print(d.getJSONInstance())"
    ]
   }
  ],
