Refactoring to add publication capability and checks.

--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -220,7 +220,10 @@
    "outputs": [],
    "source": [
     "d.pred_obj_list = ('sioc:topic','https://en.wikipedia.org/wiki/Political_science')\n",
-    "d.pred_obj_list = ('dc:creator','https://www.harpercollins.com/author/123554/cass-r-sunstein/')"
+    "d.pred_obj_list = ('dc:creator','https://www.harpercollins.com/author/123554/cass-r-sunstein/')\n",
+    "\n",
+    "# when the model is completed it must be published\n",
+    "d.published = True"
    ]
   },
   {
