--- a/RM/3_1_0/notebooks/XdString Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdString Examples.ipynb
@@ -69,7 +69,11 @@
     }
    },
    "source": [
-    "Create a XdString instance. In this case we are going to set a string value for the color of an item chosen by a customer. Notice in the above documentation that *label* and *definition_url* are both marked **REQUIRED**. The *label* must be passed on initialization. This is true of all XdTypes. "
+    "Create a XdString model instance. \n",
+    "\n",
+    "In this case we are going to set a string value for the color of an item chosen by a customer. \n",
+    "\n",
+    "Notice in the above documentation that *label* and *definition_url* are both marked **REQUIRED**. The *label* must be passed on initialization. This is true of all XdTypes. "
    ]
   },
   {
@@ -106,7 +110,7 @@
     }
    },
    "source": [
-    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF as well as appended to the human-readable docs. This URL should define or describe the value expressed in the *label*."
+    "Add a defining URL for the model. This will be translated into machine processable instructions in RDF. This URL should define or describe the value expressed in the *label*."
    ]
   },
   {
@@ -158,6 +162,7 @@
    },
    "outputs": [],
    "source": [
+    "# Review the model details so far\n",
     "print(d, '\\n')\n",
     "print(d.docs)"
    ]
@@ -171,7 +176,7 @@
    },
    "source": [
     "# Ontological Semantics (part 2)\n",
-    "In addition to the defining_url we can add more RDF semantics to the model for machine processing. \n",
+    "In addition to the *definition_url* we should add more RDF semantics to the model for machine processing. \n",
     "\n",
     "We do this by passing in tuples with a predicate/object pair. \n",
     "These are part of the RDF subject, predicate, object triple concept. This is the foundation of semantic graph data. If you aren't familiar with these concepts then see: http://www.linkeddatatools.com/introducing-rdf \n",
@@ -180,9 +185,7 @@
     "\n",
     "In S3Model, the model component which is defined by the unique ID *mcuid*, is the Subject. \n",
     "So here we are adding a predicate and an object to give enhanced meaning to our model. \n",
-    "The unique ID *mcuid* is a synonym for the *label*.\n",
-    "\n",
-    "When you review the XSD fragment model below, you can see that some default RDF is already added. The statements that connect this model to the S3Model ontology as well as the label and comment statements. Then your additional predicate/object pairs are added."
+    "The unique ID *mcuid* is a synonym for the *label*.\n"
    ]
   },
   {
@@ -206,7 +209,8 @@
     }
    },
    "source": [
-    "Review the XSD model. \n",
+    "Review the XSD model fragment.\n",
+    "\n",
     "Note how the RDF is embeded along with the validation instructions. This provides a single file (when combined with all the other parts of a DMType) that is sharable as the author chooses. It completely informs the receiver of the meaning of each component. Both in human-readable as well as machine processable forms."
    ]
   },
@@ -246,7 +250,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXML())"
+    "print(d.getXMLInstance())"
    ]
   },
   {
@@ -270,7 +274,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asJSON())"
+    "print(d.getJSONInstance())"
    ]
   },
   {
@@ -358,7 +362,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXML())"
+    "print(d.getXMLInstance())"
    ]
   },
   {
@@ -414,7 +418,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXML())"
+    "print(d.getXMLInstance())"
    ]
   },
   {
@@ -426,7 +430,9 @@
    },
    "source": [
     "# Constraints (part 3)\n",
-    "Other constraints can be applied such as a regular expression, or minimum, maximum or exact length restrictions. Some of these are mutually exclusive so it requires resetting others as we demonstrate them or create a new model with the defaults. Also, not all constraints make sense in certain contexts. For example the lengths or regex doesn't make sense with our color selection model we created above. "
+    "Other constraints can be applied such as a regular expression, or minimum, maximum or exact length restrictions. \n",
+    "\n",
+    "Some of these constraints are mutually exclusive so it requires us to create a new model with the defaults. Also, not all constraints make sense in certain contexts. For example the lengths or regex doesn't make sense with our color selection model we created above. "
    ]
   },
   {
@@ -493,7 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.asXML())"
+    "print(d.getXMLInstance())"
    ]
   },
   {
@@ -504,9 +510,21 @@
     }
    },
    "source": [
-    "# Constraints (part 4)\n",
-    "As mentioned before, there are other constraints concerning lengths that make sense in some contexts. \n",
-    "Can you think of these contexts and define a model for them? Be sure to add some documentation and get a defining_url. Also experiement with setting cardinality values. Remember to create a new instance each time since models are immutable."
+    "# Constraints (Challenge)\n",
+    "As mentioned before, there are other constraints concerning lengths that make sense in some contexts.\n",
+    "\n",
+    "Can you think of these contexts and define a model for them? Be sure to add some documentation and get a definition_url. \n",
+    "\n",
+    "Also experiement with setting cardinality values. **Remember to create a new instance each time since models are immutable**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start your new model here\n"
    ]
   }
  ],
