Updating notebooks for publication capability and checks.

--- a/RM/3_1_0/notebooks/XdString Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdString Examples.ipynb
@@ -225,6 +225,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -349,6 +350,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -405,6 +407,7 @@
    "outputs": [],
    "source": [
     "d.default = 'Blue'\n",
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -474,6 +477,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
